crates/wolf_sema/tests/snapshots/pattern_diagnostics__e0806_range_in_let.snap
---
source: crates/wolf_sema/tests/pattern_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0806]: this pattern can fail to match, but a binding cannot
 --> mem:///main.lu:2:9
  |
2 |     let 0..10 = 5
  |         ^^^^^ refutable pattern
  |
  = note: `let`, `var`, `for`, and parameters bind every value unconditionally; test and
    destructure with `match` instead: `match value { Pattern(x) => …, _ => … }`.
