crates/wolf_sema/tests/snapshots/pattern_diagnostics__e0809_single_tag_covers.snap
---
source: crates/wolf_sema/tests/pattern_diagnostics.rs
assertion_line: 41
expression: "render_types(&[(&[], \"main.lu\", src)])"
---

