crates/wolf_sema/tests/snapshots/pattern_diagnostics__e0815_empty_range_backwards.snap
---
source: crates/wolf_sema/tests/pattern_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0815]: this range pattern is empty — `9..=3` matches no value
 --> mem:///main.lu:4:9
  |
4 |         9..=3 => 1,
  |         ^^^^^ empty range
  |
  = note: the low end must not be above the high end — swap the ends ([gram.pat.range]).
